tests/snapshots/conformance__n_number_.2e-3.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[.2e-3]
stdout --- 
<empty>
stderr --- 
error: unexpected character `.`. expected start of a json value
 --> stdin:1:2
  |
1 | [.2e-3]
  |  ^
